--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,4 +27,4 @@ jobs:
 
       - name: Run unit tests with nose
         run: |
-          nosetests -v
+          nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
